[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Enemy/AntSM.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy/EnemyHealth.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemy/catenemys.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemy/Ant.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 2 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 20, 56, 10, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "chase ",
"speed": 5.0
} ]

[node name="Ant" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 4 )
speed = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AntSM" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
position = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="EnemyHealth" parent="." instance=ExtResource( 2 )]
margin_left = -7.0
margin_top = -7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 5 )
animation = "chase "

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
